2008-07-06 Gerd Kohlberger <gerdk@svn.gnome.org>

	* data/dwell-click-applet.glade:
	* data/pointer-capture-applet.glade:	
	Finally add Francesco to doc credits. See changelog from 2008-03-27.

2008-07-06 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: (accessibility_enabled): Avoid getting launched by
	g-s-d again when we disable our gconf keys.
	* src/dwell-click-applet.c: Remove an unused var and some cleanup.

2008-07-06 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-timer.c: Remove unnecessary g_timer_stop() calls.

2008-07-06 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c:
	* src/mt-timer.c:
	* man/mousetweaks.1:

	Change the dwell delay range from 0.5-3.0 sec to 0.2-3.0 sec.

2008-06-26 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/dwell-click-applet.c: Add time animation to enable button.

2008-06-24 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: (dwell_do_pointer_click): Add a short delay between
	button-press and -release events. This should allow GOK to handle
	events generated by mousetweaks.

	For details see bug #538004

2008-06-23 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-common.c: Fix compiler warnings
	* src/mt-main.c: (main): Report at-spi leaks if there are any.
	(within_tolerance): rename function to below_threshold and
	remove sqrt() and pow() calls.

2008-06-16 Francesco Fumanti <frfumanti@svn.gnome.org>

	* configure.ac:
	* README:

	Post release version increment: 2.23.5

2008-06-16 Francesco Fumanti <frfumanti@svn.gnome.org>

	* NEWS: Prepare 2.23.4 release.

2008-06-15 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: Remove unnecessary casts.

2008-06-15 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: Move 'drag-release' code to more appropriate place.

2008-06-15 Gerd Kohlberger <gerdk@svn.gnome.org>

	* src/mt-main.c: (main): Use correct _unref function.
	(spi_button_event): Use position info from event.
	(spi_motion_event): Remove whitespace.
