@@ -6,6 +6,7 @@ AC_INIT([mousetweaks],
 
 AC_CONFIG_SRCDIR([src])
 AC_CONFIG_HEADER([config.h])
+AC_CONFIG_MACRO_DIR([m4])
 AC_PREFIX_DEFAULT([/usr])
 
 AM_INIT_AUTOMAKE([1.9])
@@ -16,16 +17,21 @@ AC_PROG_INSTALL
 AC_HEADER_STDC
 AC_C_CONST
 
+GNOME_COMMON_INIT
+GNOME_COMPILE_WARNINGS([maximum])
+GNOME_MAINTAINER_MODE_DEFINES
+
 dnl *** i18n ***
 
-AM_GLIB_GNU_GETTEXT
-IT_PROG_INTLTOOL([0.35.0])
+IT_PROG_INTLTOOL([0.40.0])
 
 GETTEXT_PACKAGE=mousetweaks
 AC_SUBST(GETTEXT_PACKAGE)
 
 AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Gettext Package])
 AC_SUBST([CONFIG_STATUS_DEPENDENCIES],['$(top_srcdir)/po/LINGUAS'])
+
+AM_GLIB_GNU_GETTEXT
 
 dnl *** documentation ***
 
