@@ -1,6 +1,8 @@
-include $(top_srcdir)/gnome-doc-utils.make
+AUTOMAKE_OPTIONS = -Wno-portability
 dist-hook: doc-dist-hook
 
 DOC_MODULE = mousetweaks
 DOC_INCLUDES = legal.xml
 DOC_LINGUAS = el es oc sv
+
+include $(top_srcdir)/gnome-doc-utils.make
